--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,8 +22,7 @@
                     <li><a href="">Контакти</a></li>
                 </ul>
             </nav>
-            <address class="address">
-                <ul>
+                <ul class="address">
                     <li><a class="info" href="mailto:info@devstudio.com"><svg>
                         <use href="./imeges/page1/sprite.svg#icon-a1"></use>
                     </svg>info@devstudio.com</a></li>
@@ -31,7 +30,6 @@
                         <use href="./imeges/page1/sprite.svg#icon-a2"></use>
                     </svg>+38 096 111 11 11</a></li>
                 </ul>
-            </address>
         </div>
     </header>
     <main>
@@ -45,26 +43,34 @@
             <div class="container">
                 <h2 hidden class="section-title">Our advantages</h2>
                 <ul>
-                    <li><img src="./imeges/page1/Icon1.svg" alt="">
+                    <li><svg>
+                        <use href="./imeges/page1/sprite2.svg#icon-Icon1" width="270"></use>
+                    </svg>
                         <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p>Ідейні міркування, і навіть початок
                         повсякденної роботи з формування 
                         позиції. 
                         </p>
                     </li>
-                    <li><img src="./imeges/page1/Icon2.svg" alt="">
+                    <li><svg>
+                        <use href="./imeges/page1/sprite2.svg#icon-Icon2" width="270"></use>
+                    </svg>
                         <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                         <p>Завдання організації, особливо рамки 
                         і місце навчання кадрів тягне у себе.
                         </p>
                     </li>
-                    <li><img src="./imeges/page1/Icon3.svg" alt="">
+                    <li><svg>
+                        <use href="./imeges/page1/sprite2.svg#icon-Icon3" width="270"></use>
+                    </svg>
                         <h3 class="title">ПЛАНУВАННЯ</h3>
                         <p>Так само консультація з широким
                         активом значною мірою зумовлює.
                         </p>
                     </li>
-                    <li><img src="./imeges/page1/Icon4.svg" alt="">
+                    <li><svg>
+                        <use href="./imeges/page1/sprite2.svg#icon-Icon4" width="270"></use>
+                    </svg>
                         <h3 class="title">ПЛАНУВАННЯ</h3>
                         <p>Значимість цих проблем настільки
                         очевидна, що реалізація планових
@@ -78,9 +84,9 @@
             <div class="container">
                 <h2>Чим ми займаємося</h2>
                 <ul>
-                    <li><img src="./imeges/page1/box1.jpg" alt="Програмування"></li>
-                    <li><img src="./imeges/page1/box2.jpg" alt="Моб.додатки"></li>
-                    <li><img src="./imeges/page1/box3.jpg" alt="Ігри"></li> 
+                    <li><img src="./imeges/page1/box1.jpg" alt="Програмування" width="370"></li>
+                    <li><img src="./imeges/page1/box2.jpg" alt="Моб.додатки" width="370"></li>
+                    <li><img src="./imeges/page1/box3.jpg" alt="Ігри" width="370"></li> 
                 </ul>
             </div>
         </section>
@@ -283,7 +289,7 @@
         </section>
     </main>
     <footer>
-        <div class="container foot">
+        <section class="foot">
             <div>
                 <a class="logo1" href=""><span>Web</span>Studio</a>
                 <address class="address1">
@@ -296,7 +302,6 @@
             </div>
             <div class="div">
                 <h3>приєднуйтесь</h3>
-                
                 <ul>
                     <li>
                         <a href="">
@@ -328,7 +333,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </section>
     </footer>
 </body>
 </html>
