--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <h2>Наша команда</h2>
                 <ul class="team">
                     <li><div class="photo">
-                        <img src="./imeges/page1/img.jpg" alt="фото">
+                        <img src="./imeges/page1/img.jpg" alt="фото" width="270" height="260">
                         <h3>Ігор Дем'яненко</h3>
                         <p>Product Designer</p>
                         <ul>
@@ -130,7 +130,7 @@
                         </ul>
                         </div></li>
                     <li><div class="photo">
-                        <img src="./imeges/page1/img(3).jpg" alt="фото">
+                        <img src="./imeges/page1/img(3).jpg" alt="фото" width="270" height="260">
                         <h3>Ольга Рєпіна</h3>
                         <p>Frontend Developer</p>
                         <ul>
@@ -165,7 +165,7 @@
                         </ul>
                         </div></li>
                     <li><div class="photo">
-                        <img src="./imeges/page1/img(1).jpg" alt="фото">
+                        <img src="./imeges/page1/img(1).jpg" alt="фото" width="270" height="260">
                         <h3>Микола Тарасов</h3>
                         <p>Marketing</p>
                         <ul>
@@ -200,7 +200,7 @@
                         </ul>
                         </div></li>
                     <li><div class="photo">
-                        <img src="./imeges/page1/img(2).jpg" alt="фото"> 
+                        <img src="./imeges/page1/img(2).jpg" alt="фото" width="270" height="260"> 
                         <h3>Михайло Єрмаков</h3>
                         <p>UI Designer</p>
                         <ul>
@@ -289,12 +289,12 @@
         </section>
     </main>
     <footer>
-        <section class="foot">
+        <div class="foot">
             <div>
                 <a class="logo1" href=""><span>Web</span>Studio</a>
                 <address class="address1">
                     <ul>
-                        <li><a class="a" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li><a class="a" href="" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
                         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
@@ -333,7 +333,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </div>
     </footer>
 </body>
 </html>
